# potato

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .issuetracker  .vsconfig  CMakeLists.txt  CMakeSettings.json  License.txt  README.md  azure-pipelines.yml  grimm.code-workspace  launch.vs.json  tasks.vs.json
documentation/: CMakeLists.txt  Doxyfile.in  README.md  coding-style.md  conf.py  ecs.md  getting-started.md  index.md  index.rst  license.md  tracy.md
source/: .clang-format  .clang-tidy  CMakeLists.txt
source/app/: CMakeLists.txt
source/app/recon/: CMakeLists.txt
source/app/shell/: CMakeLists.txt
source/app_recon/: CMakeLists.txt
source/app_recon/private/: CMakeLists.txt  main.cpp
source/app_shell/: CMakeLists.txt
source/app_shell/private/: CMakeLists.txt  camera_controller.h  scene.h
source/assetdb/: CMakeLists.txt
source/assetdb/private/: CMakeLists.txt  asset_library.cpp  hash_cache.cpp  stream_json.h
source/assetdb/tests/: CMakeLists.txt
source/bin_codegen/: CMakeLists.txt
source/bin_codegen/private/: cxx.h  generator.cpp  generator.h  main.cpp  schema.cpp  schema.h
source/bin_headerify/: CMakeLists.txt
source/bin_headerify/private/: main.cpp
source/bin_recon/: CMakeLists.txt
source/bin_recon/private/: CMakeLists.txt  asset_database.cpp  asset_database.h  converter_app.cpp  file_hash_cache.cpp  file_hash_cache.h  main.cpp  meta_file.cpp  meta_file.h  recon_app.cpp  recon_app.h  recon_config.cpp  recon_config.h  recon_log_sink.cpp  recon_log_sink.h  recon_protocol.cpp  recon_queue.h  recon_server.cpp  recon_server.h
source/bin_recon/schema/: config.sap
source/bin_recon/tests/: main.cpp  test_converter_config.cpp
source/bin_shell/: CMakeLists.txt
source/bin_shell/private/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  command_palette.cpp  command_palette.h  commands.cpp  components.h  document.cpp  editor.cpp  filetree_editor.cpp  game_document.cpp  game_editor.cpp  game_panel.cpp  hierarchy_panel.cpp  hotkey.cpp  imgui_reflector.cpp  imgui_reflector.h  inspector_panel.cpp  log_history.cpp  log_window.cpp  log_window.h  main.cpp  menu.cpp  recon_client.cpp  recon_client.h  scene.cpp  scene.h  scene_doc.cpp  scene_document.cpp  scene_editor.cpp  scene_panel.cpp  settings.cpp  settings.h  shell_app.cpp  shell_app.h
source/bin_shell/schema/: components.sap  settings.sap
source/concurrency/: CMakeLists.txt
source/concurrency/private/: CMakeLists.txt  fast_semaphore.posix.cpp  fast_semaphore.windows.cpp  semaphore.cpp  semaphore.default.cpp  semaphore.posix.cpp  semaphore.windows.cpp  task_queue.cpp  task_system.cpp  task_worker.cpp  thread.cpp  thread.windows.cpp  thread_util.cpp  thread_util.darwin.cpp  thread_util.linux.cpp  thread_util.windows.cpp
source/concurrency/tests/: CMakeLists.txt  test_concurrent_queue.cpp  test_lock_free_queue.cpp  test_semaphore.cpp  test_task_worker.cpp  test_thread_util.cpp
source/filesystem/: CMakeLists.txt
source/filesystem/private/: CMakeLists.txt  filesystem.cpp  filesystem.default.cpp  filesystem.posix.cpp  native_backend.cpp  native_backend.default.cpp  native_backend.posix.cpp  null_backend.cpp  null_filesystem.cpp  path_util.cpp  stream_util.cpp
source/filesystem/tests/: CMakeLists.txt  test_native_backend.cpp  test_null_backend.cpp  test_null_filesystem.cpp  test_path_util.cpp
source/foundation/: CMakeLists.txt
source/foundation/private/: CMakeLists.txt  callstack.posix.cpp  callstack.windows.cpp  debug.cpp  debug.posix.cpp  debug.windows.cpp  debug.windows.h  debug.windows.rc  logging.cpp  string_format.cpp  string_writer.cpp
source/foundation/tests/: CMakeLists.txt  test_array_view.cpp  test_blob.cpp  test_callstack.cpp  test_delegate.cpp  test_delegate_ref.cpp  test_delegate_view.cpp  test_fixed_string.cpp  test_fixed_string_writer.cpp  test_hash.cpp  test_rc.cpp  test_span.cpp  test_string.cpp  test_string_blob.cpp  test_string_view.cpp  test_string_writer.cpp  test_uhash.cpp  test_vector.cpp  test_zstring_view.cpp  vector.cpp
source/gpu/: CMakeLists.txt
source/gpu/private/: CMakeLists.txt  descriptor_heap.cpp  device.cpp  factory.cpp  null_factory.cpp  resource.cpp  swap_chain.cpp
source/gpu/tests/: CMakeLists.txt  null.cpp
source/gpu_d3d12/: CMakeLists.txt
source/gpu_d3d12/private/: d3d12_device.cpp  d3d12_device.h  d3d12_factory.cpp  d3d12_factory.h
source/gpu_d3d12/tests/: CMakeLists.txt  factory.cpp
source/gpu_vulkan/: CMakeLists.txt
source/gpu_vulkan/private/: vk_device.cpp  vk_device.h
source/grui/: CMakeLists.txt
source/grui/private/: CMakeLists.txt  grui.cpp
source/image/: CMakeLists.txt
source/image/private/: format.cpp  image.cpp
source/imgrui/: CMakeLists.txt
source/imgrui/private/: CMakeLists.txt  imgrui.cpp
source/lib_assetdb/: CMakeLists.txt
source/lib_assetdb/private/: asset_record.cpp
source/lib_assetdb/tests/: CMakeLists.txt
source/lib_ecs/: CMakeLists.txt
source/lib_gpu/: CMakeLists.txt
source/lib_image/private/: CMakeLists.txt
source/lib_image/tests/: CMakeLists.txt
source/lib_recon/: CMakeLists.txt
source/lib_recon/private/: converter_app.cpp
source/lib_recon/tests/: CMakeLists.txt
source/lib_render/: CMakeLists.txt
source/lib_runtime/private/: path.cpp  stream.cpp  uuid.cpp
source/lib_runtime/tests/: CMakeLists.txt
source/libassetdb/: CMakeLists.txt
source/libassetdb/private/: CMakeLists.txt  asset_library.cpp  (+2 more)
source/libaudio/: CMakeLists.txt
source/libecs/: CMakeLists.txt
source/libeditor/: CMakeLists.txt
source/libformat/: CMakeLists.txt
source/libimage/: CMakeLists.txt
source/libimport/: CMakeLists.txt
source/libposql/: CMakeLists.txt
source/librecon/: CMakeLists.txt
source/libreflex/: CMakeLists.txt
source/librender/: CMakeLists.txt
source/libruntime/: CMakeLists.txt
source/libtools/: CMakeLists.txt
source/math/: CMakeLists.txt
source/recon/: CMakeLists.txt
source/reflex/: CMakeLists.txt
source/render/: CMakeLists.txt
source/shell/: CMakeLists.txt
source/spud/: CMakeLists.txt
(+995 files in other folders)
