add_subdirectory(bin_headerify)
add_subdirectory(libformat)
add_subdirectory(spud)
add_subdirectory(libruntime)
add_subdirectory(libaudio)
add_subdirectory(libreflex)
add_subdirectory(librender)
add_subdirectory(libecs)
add_subdirectory(libtools)
add_subdirectory(libposql)
add_subdirectory(libeditor)
add_subdirectory(bin_shell)
add_subdirectory(bin_recon)
add_subdirectory(librecon)
add_subdirectory(libimport)
